<resources>
    <string name="app_name">MovieApp</string>

    <string name="title_activity_detail_movie">Detail Movie</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="movie">Movie</string>
    <string name="tvshow">TvShow</string>
    <string name="share_text">Saksikan segera film %s di tv kesayangan anda</string>
    <string name="who_s_played">Who’s Played</string>
    <string name="profile_actor">profile_Actor</string>

</resources>