<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.upcoming.TvshowFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tvshow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/items_upcoming">
    </androidx.recyclerview.widget.RecyclerView>

    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:cpb_background_progressbar_color="#b6bbd8"
        app:cpb_progressbar_color_start="@color/purple_200"
        app:cpb_progressbar_color_end="@color/teal_200"
        app:cpb_background_progressbar_width="4dp"
        app:cpb_progressbar_color_direction="top_to_bottom"
        app:cpb_progressbar_color="#3f51b5"
        app:cpb_progressbar_width="6dp"
        app:cpb_round_border="true"
        app:cpb_indeterminate_mode="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>